<resources>
    <string name="app_name">Practica1:Calcula una operación</string>
    <!--para las etiquetas de los botones-->
    <string name="binario">Bin</string>
    <string name="decimal">Dec</string>
    <string name="display1"></string>
    <string name="display2"></string>
    <string name="display">0</string>
    <string name="Mod">MOD</string>
    <string name="borrar">C</string>
    <string name="del">DEL</string>
    <string name="siete">7</string>
    <string name="ocho">8</string>
    <string name="nueve">9</string>
    <string name="division">/</string>
    <string name="cuatro">4</string>
    <string name="cinco">5</string>
    <string name="seis">6</string>
    <string name="multiplica">X</string>
    <string name="uno">1</string>
    <string name="dos">2</string>
    <string name="tres">3</string>
    <string name="resta">-</string>
    <string name="punto">.</string>
    <string name="cero">0</string>
    <string name="resultado">=</string>
    <string name="suma">+</string>
    <string name="ModoCalculadora">Modo de Calculo Decimal</string>
    <string name="element_operacion">Wait 2 numbers and operation..</string>
    <string name="element_punto">use only point in value</string>
    <string name="element_division">second number greater than O</string>
    <string name="element_operador">Only one operation at a time</string>
    <string name="element_number">You need a least number</string>
    <string name="ModeOperationBin">Mode Binary calculation</string>
    <string name="ModeOperationDec">Mode Decimal calculation</string>
    <string name="ModeTextOpDecimal">Mode of Calculator Decimal</string>
    <string name="ModeTextOpBinary">Mode of Calculator Binary</string>
</resources>
