<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="mx.unam.jigm.practica1.ActividadPrincipal"
    android:gravity="center_vertical|center_horizontal"
    android:theme="@style/AppTheme"
    android:touchscreenBlocksFocus="false"
    android:background="@color/background_material_dark">

<LinearLayout
android:layout_width="match_parent"
android:layout_height="wrap_content">
<TextView
    android:id="@+id/TextModoCalculadora"
    android:text="@string/ModoCalculadora"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:textColor="@color/colorLetterBtn"
    android:background="@color/colorDisplay"/>
</LinearLayout>

<LinearLayout
    android:id="@+id/LiLyPrimera"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <TextView
        android:gravity="right"
        android:id="@+id/TxtDisplay1"
        android:layout_weight="0.27"
        android:layout_width="match_parent"
        android:layout_height="@dimen/secondDisplay"
        android:text="@string/display1"
        android:textSize="@dimen/textsecondDisplay"
        android:textColor="@color/colorLetterDisplay"
        android:layout_gravity="center"
        android:background="@color/colorDisplay"/>
    <TextView
        android:gravity="right"
        android:id="@+id/TxtDisplay2"
        android:layout_weight="0.27"
        android:layout_width="match_parent"
        android:layout_height="@dimen/secondDisplay"
        android:text="@string/display2"
        android:textSize="@dimen/textsecondDisplay"
        android:textColor="@color/colorLetterDisplay"
        android:layout_gravity="center"
        android:background="@color/colorDisplay"/>
    <TextView
        android:gravity="right"
        android:id="@+id/TxtDisplay"
        android:layout_weight="0.27"
        android:layout_width="match_parent"
        android:layout_height="@dimen/primaryDisplay"
        android:text="@string/display"
        android:textSize="@dimen/textprimaryDisplay"
        android:textColor="@color/colorLetterDisplay"
        android:layout_gravity="center"
        android:background="@color/colorDisplay"/>

</LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/BtnBinario"
            android:text="@string/binario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:textSize="@dimen/textBtn"
            android:textColor="@color/colorLetterBtn"
            android:background="@color/colorModOperation"
            />
        <Button
            android:id="@+id/BtnDecimal"
            android:text="@string/decimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:textSize="@dimen/textBtn"
            android:textColor="@color/colorLetterBtn"
            android:background="@color/colorModOperation"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/BtnBorrar"
            android:layout_weight="0.15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/borrar"
            android:textSize="@dimen/textBtn"
            android:textColor="@color/colorLetterBtn"
            android:background="@color/colorBtnBorra"/>
        <Button
            android:id="@+id/BtnDel"
            android:layout_weight="0.15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/del"
            android:textSize="@dimen/textBtn"
            android:textColor="@color/colorLetterBtn"
            android:background="@color/colorBtnBorra"/>
        <Button
            android:id="@+id/BtnMod"
            android:layout_weight="0.15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Mod"
            android:textSize="@dimen/textBtn"
            android:textColor="@color/colorLetterBtn"
            android:background="@color/colorBtnOperation"/>
    </LinearLayout>
<LinearLayout
    android:id="@+id/LiLySegunda"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <Button
        android:id="@+id/Btn7"
        android:layout_weight="0.25"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/siete"
        android:textSize="@dimen/textBtnNumber"
        android:textColor="@color/colorLetterBtn"
        android:background="@color/colorBtnNumber"/>
    <Button
        android:id="@+id/Btn8"
        android:layout_weight="0.25"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ocho"
        android:textSize="@dimen/textBtnNumber"
        android:textColor="@color/colorLetterBtn"
        android:background="@color/colorBtnNumber"/>
    <Button
        android:id="@+id/Btn9"
        android:layout_weight="0.25"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nueve"
        android:textSize="@dimen/textBtnNumber"
        android:textColor="@color/colorLetterBtn"
        android:background="@color/colorBtnNumber"/>
    <Button
        android:id="@+id/BtnDivision"
        android:layout_weight="0.25"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/division"
        android:textSize="@dimen/textBtnNumber"
        android:textColor="@color/colorLetterBtn"
        android:background="@color/colorBtnOperation"/>
</LinearLayout>
<LinearLayout
    android:id="@+id/LiLyTercera"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <Button
        android:id="@+id/Btn4"
        android:layout_weight="0.25"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cuatro"
        android:textSize="@dimen/textBtnNumber"
        android:textColor="@color/colorLetterBtn"
        android:background="@color/colorBtnNumber"/>
    <Button
        android:id="@+id/Btn5"
        android:layout_weight="0.25"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cinco"
        android:textSize="@dimen/textBtnNumber"
        android:textColor="@color/colorLetterBtn"
        android:background="@color/colorBtnNumber"/>
    <Button
        android:id="@+id/Btn6"
        android:layout_weight="0.25"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/seis"
        android:textSize="@dimen/textBtnNumber"
        android:textColor="@color/colorLetterBtn"
        android:background="@color/colorBtnNumber"/>
    <Button
        android:id="@+id/BtnMultiplica"
        android:layout_weight="0.25"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/multiplica"
        android:textSize="@dimen/textBtnNumber"
        android:textColor="@color/colorLetterBtn"
        android:background="@color/colorBtnOperation"/>
</LinearLayout>
<LinearLayout
    android:id="@+id/LiLyCuarta"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <Button
        android:id="@+id/Btn1"
        android:layout_weight="0.25"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/uno"
        android:textSize="@dimen/textBtnNumber"
        android:textColor="@color/colorLetterBtn"
        android:background="@color/colorBtnNumber"/>
    <Button
        android:id="@+id/Btn2"
        android:layout_weight="0.25"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dos"
        android:textSize="@dimen/textBtnNumber"
        android:textColor="@color/colorLetterBtn"
        android:background="@color/colorBtnNumber"/>
    <Button
        android:id="@+id/Btn3"
        android:layout_weight="0.25"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tres"
        android:textSize="@dimen/textBtnNumber"
        android:textColor="@color/colorLetterBtn"
        android:background="@color/colorBtnNumber"/>
    <Button
        android:id="@+id/BtnResta"
        android:layout_weight="0.25"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resta"
        android:textSize="@dimen/textBtnNumber"
        android:textColor="@color/colorLetterBtn"
        android:background="@color/colorBtnOperation"/>
</LinearLayout>
<LinearLayout
    android:id="@+id/LiLyQuinta"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <Button
        android:id="@+id/BtnPunto"
        android:layout_weight="0.25"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/punto"
        android:textSize="@dimen/textBtnNumber"
        android:textColor="@color/colorLetterBtn"
        android:gravity="center"
        android:background="@color/colorBtnNumber"/>
    <Button
        android:id="@+id/Btn0"
        android:layout_weight="0.25"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cero"
        android:textSize="@dimen/textBtnNumber"
        android:textColor="@color/colorLetterBtn"
        android:background="@color/colorBtnNumber"/>
    <Button
        android:id="@+id/BtnResultado"
        android:layout_weight="0.25"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resultado"
        android:textSize="@dimen/textBtnNumber"
        android:textColor="@color/colorLetterBtn"
        android:background="@color/colorBtnNumber"/>
    <Button
        android:id="@+id/BtnSuma"
        android:layout_weight="0.25"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/suma"
        android:textSize="@dimen/textBtnNumber"
        android:textColor="@color/colorLetterBtn"
        android:background="@color/colorBtnOperation"/>
    </LinearLayout>
</LinearLayout>